# Ambient_Noise_Tracker

./: .gitignore  README.md
src/: CMakeLists.txt  functs.c  functs.h  gpio_button.h  gpio_led.h  gps.c  gps.h  liquid_crystal_i2c.c  liquid_crystal_i2c.h  main.c  microphone.c  microphone.h
test/gps_simulation/: gps_sim.py
